--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
+            <li><a href="#Youtube">Creator</a></li>
             <li><a href="#discord">Discord</a></li>
             <li><a href="#tiktok">TikTok</a></li>
             <li><a href="#roblox">Roblox</a></li>
@@ -234,11 +235,18 @@
         <p>ooo1, a proud Mexican and content creator known for his expertise in the Roblox game Evade, boasting over 2,500 subscribers...</p>
     </section>
 
+    <!-- Youtube Section -->
+    <section id="about">
+        <h2>Youtube Channel</h2>
+        <p>Watch some cool and pro evade videos gameplay!</p>
+        <a href="https://www.youtube.com/@ooo1dh" class="btn"><i class="fab fa-Youtube"></i>Teleport to ooo1 yt channel</a>
+    </section>
+
     <!-- Discord Section -->
     <section id="discord">
         <h2>Join the 0001dh Discord</h2>
         <p>Connect with other fans and join the conversation!</p>
-        <a href="https://discord.gg/Ak6ZkjrjH" class="btn"><i class="fab fa-discord"></i>Join the Discord</a>
+        <a href="https://discord.gg/Ak6ZkjrjH" class="btn"><i class="fab fa-discord"></i>Join the Discord server</a>
     </section>
 
     <!-- TikTok Section -->
@@ -265,7 +273,7 @@
             <img src="fanart3.webp" alt="Fanart 3" class="fanart" onclick="openModal(this)">
             <img src="fanart4.webp" alt="Fanart 4" class="fanart" onclick="openModal(this)">
             <img src="fanart6.webp" alt="Fanart 6" class="fanart" onclick="openModal(this)">
-            <img src="fanart7.webp" alt="Fanart 7" class="fanart" onclick="openModal(this))">
+            <img src="fanart7.webp" alt="Fanart 7" class="fanart" onclick="openModal(this)">
             <img src="fanart8.webp" alt="Fanart 8" class="fanart" onclick="openModal(this)">
             <img src="fanart9.webp" alt="Fanart 9" class="fanart" onclick="openModal(this)">
             <img src="fanart10.webp" alt="Fanart 10" class="fanart" onclick="openModal(this)">
@@ -283,6 +291,7 @@
     <!-- Footer -->
     <footer id="copyright">
         <p>© 2024 FSXStealth. All rights reserved.</p>
+        <p>         @OOO1dh fan made website</p>
     </footer>
 
     <script>
